fix: some bugs - Fix the problem that the puppy name item on My Page is not visible properly. - Fix the problem where the value of the value to post fails when the dom disappears. - Login, change password label font thickness. - Fix errors by path in netlify.

--- a/src/component/Login.module.css
+++ b/src/component/Login.module.css
@@ -27,7 +27,8 @@
 .label {
     margin-right: 1rem;
     font-size: 1.5rem;
-    font-weight: lighter;
+    font-weight: bold;
+    color: #212121;
 }
 
 .input {
